# Health_Design

./: .gitignore  AGENTS.md  README.md  health_raw.md  vibe-coding.md
health_backend/: .env.example  Dockerfile  bootstrap_users.example.json  docker-compose.yml  pyproject.toml
health_backend/app/: main.py
health_backend/app/api/v1/: auth.py  health.py  query.py  tasks.py  upload.py
health_backend/app/core/: config.py  security.py
health_backend/app/db/: database.py  init_db.py  models.py  ods_manager.py
health_backend/app/schemas/: payload.py  query.py
health_backend/app/tasks/: aggregate.py
health_backend/migrations/: env.py
health_backend/migrations/versions/: bb9d7873e725_initial_full_schema.py
health_backend/static/: index.html
health_backend/static/css/: style.css
health_backend/static/js/: app.js
health_backend/tests/: TESTING.md  api_test.py  conftest.py  test_aggregation.py  test_api_v1.py  test_init_db.py  test_issues_2_5.py  test_issues_3_4.py  test_models.py  test_query.py  test_scopes.py  test_security.py
ios_shortcuts/: ios_shortcuts.md
memory-bank/: architecture.md  datamodel.md  implementation-plan.md  prd.md  progress.md  system-patterns.md
